still needs some optimization, but simclr works

--- a/igraph_version/test.ipynb
+++ b/igraph_version/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f741d7f5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a632f710",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "id": "1f83cf54",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,7 @@
     "import pandas as pd\n",
     "import pickle\n",
     "import igraph as ig\n",
+    "import torch\n",
     "\n",
     "from grad.dataprep.util import create_pattern_dict, filter_dict\n",
     "from grad.dataprep.util import *\n",
@@ -50,12 +51,14 @@
     "from grad.dataprep.generation import *\n",
     "from util import *\n",
     "from plotting_helpers import *\n",
-    "\n"
+    "\n",
+    "from simclr import * \n",
+    "from augmentation import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d2f89339",
    "metadata": {},
    "outputs": [],
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d4c5b588",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "011144f4",
    "metadata": {},
    "outputs": [
@@ -1986,7 +1989,7 @@
        " [2618 rows x 15 columns]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "58111aa5",
    "metadata": {},
    "outputs": [],
@@ -2008,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "e17054d0",
    "metadata": {},
    "outputs": [],
@@ -2131,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "b535b5de",
    "metadata": {},
    "outputs": [
@@ -3518,7 +3521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "a22454ef",
    "metadata": {},
    "outputs": [
@@ -4243,7 +4246,7 @@
        " [3473 rows x 15 columns]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4254,19 +4257,415 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "063040ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for network in non_laundering_networks:\n",
-    "    plot_graph_from_dict_igraph(network, show=True, save_path= f\"non-laundering_network_{non_laundering_networks.index(network)}.png\")"
+    "# for network in non_laundering_networks:\n",
+    "#     plot_graph_from_dict_igraph(network, show=True, save_path= f\"non-laundering_network_{non_laundering_networks.index(network)}.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5083d303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from collections import deque\n",
+    "\n",
+    "def crop_network(network, crop_ratio=0.7, random_seed=None):\n",
+    "    \"\"\"\n",
+    "    Crop a network to a connected subgraph.\n",
+    "    crop_ratio = fraction of nodes to keep.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if random_seed is not None:\n",
+    "        random.seed(random_seed)\n",
+    "\n",
+    "    nodes = list(network[\"nodes\"])\n",
+    "    target_size = max(2, int(len(nodes) * crop_ratio))\n",
+    "\n",
+    "    start_node = random.choice(nodes)\n",
+    "\n",
+    "    visited = set()\n",
+    "    queue = deque([start_node])\n",
+    "\n",
+    "    # BFS until we hit target size\n",
+    "    while queue and len(visited) < target_size:\n",
+    "        node = queue.popleft()\n",
+    "        if node in visited:\n",
+    "            continue\n",
+    "\n",
+    "        visited.add(node)\n",
+    "\n",
+    "        neighbors = set(\n",
+    "            network[\"transactions\"]\n",
+    "            .loc[\n",
+    "                (network[\"transactions\"][\"From_Account_int\"] == node) |\n",
+    "                (network[\"transactions\"][\"To_Account_int\"] == node),\n",
+    "                [\"From_Account_int\", \"To_Account_int\"]\n",
+    "            ]\n",
+    "            .values\n",
+    "            .ravel()\n",
+    "        )\n",
+    "\n",
+    "        neighbors &= set(nodes)\n",
+    "\n",
+    "        for nbr in neighbors:\n",
+    "            if nbr not in visited:\n",
+    "                queue.append(nbr)\n",
+    "\n",
+    "    cropped_nodes = visited\n",
+    "\n",
+    "    # Filter transactions\n",
+    "    cropped_tx = network[\"transactions\"][\n",
+    "        network[\"transactions\"][\"From_Account_int\"].isin(cropped_nodes) &\n",
+    "        network[\"transactions\"][\"To_Account_int\"].isin(cropped_nodes)\n",
+    "    ].copy()\n",
+    "\n",
+    "    return {\n",
+    "        **network,\n",
+    "        \"start_node\": start_node,\n",
+    "        \"nodes\": cropped_nodes,\n",
+    "        \"laundering_nodes\": network[\"laundering_nodes\"] & cropped_nodes,\n",
+    "        \"collapsed_nodes\": network[\"collapsed_nodes\"] & cropped_nodes,\n",
+    "        \"node_depths\": {n: d for n, d in network[\"node_depths\"].items() if n in cropped_nodes},\n",
+    "        \"transactions\": cropped_tx\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "db573bd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_graph = build_igraph_from_transactions(df_full)\n",
+    "\n",
+    "with_laund_networks[3][\"graph\"] = build_igraph_from_transactions(with_laund_networks[3][\"transactions\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "dbd0773c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network_cropped = crop_network(with_laund_networks[3], crop_ratio=0.5, random_seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "9e4c60bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network_deletions = delete_random_edges(with_laund_networks[3], delete_frac\n",
+    "                                        =0.15, random_seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "3bc26daf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network_additions = add_nodes_to_network(with_laund_networks[3], full_graph, df_full, max_new_nodes=100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "f6c4dbf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes in deleted network: 178\n",
+      "Number of transactions in deleted network: 1422\n",
+      "Number of transactions in original network: 1672\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of nodes in deleted network: {len(network_deletions['nodes'])}\")\n",
+    "print(f\"Number of transactions in deleted network: {len(network_deletions['transactions'])}\")\n",
+    "print(f\"Number of transactions in original network: {len(with_laund_networks[3]['transactions'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "9e19d0ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graph_from_dict_igraph(with_laund_networks[3], show=True, save_path=\"og_network.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "2c6c896c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graph_from_dict_igraph(network_additions, show=True, save_path=\"added_network.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "1dcb9e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "encoder = GraphEncoder(in_dim=3, hidden_dim=64, out_dim=128).to(device)\n",
+    "projector = ProjectionHead(in_dim=128, proj_dim=64).to(device)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(\n",
+    "    list(encoder.parameters()) + list(projector.parameters()),\n",
+    "    lr=1e-3\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "ab4d6174",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "7c8d862a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      " Processing batch 1/86\n",
+      " Processing batch 2/86\n",
+      " Processing batch 3/86\n",
+      " Processing batch 4/86\n",
+      " Processing batch 5/86\n",
+      " Processing batch 6/86\n",
+      " Processing batch 7/86\n",
+      " Processing batch 8/86\n",
+      " Processing batch 9/86\n",
+      " Processing batch 10/86\n",
+      " Processing batch 11/86\n",
+      " Processing batch 12/86\n",
+      " Processing batch 13/86\n",
+      " Processing batch 14/86\n",
+      " Processing batch 15/86\n",
+      " Processing batch 16/86\n",
+      " Processing batch 17/86\n",
+      " Processing batch 18/86\n",
+      " Processing batch 19/86\n",
+      " Processing batch 20/86\n",
+      " Processing batch 21/86\n",
+      " Processing batch 22/86\n",
+      " Processing batch 23/86\n",
+      " Processing batch 24/86\n",
+      " Processing batch 25/86\n",
+      " Processing batch 26/86\n",
+      " Processing batch 27/86\n",
+      " Processing batch 28/86\n",
+      " Processing batch 29/86\n",
+      " Processing batch 30/86\n",
+      " Processing batch 31/86\n",
+      " Processing batch 32/86\n",
+      " Processing batch 33/86\n",
+      " Processing batch 34/86\n",
+      " Processing batch 35/86\n",
+      " Processing batch 36/86\n",
+      " Processing batch 37/86\n",
+      " Processing batch 38/86\n",
+      " Processing batch 39/86\n",
+      " Processing batch 40/86\n",
+      " Processing batch 41/86\n",
+      " Processing batch 42/86\n",
+      " Processing batch 43/86\n",
+      " Processing batch 44/86\n",
+      " Processing batch 45/86\n",
+      " Processing batch 46/86\n",
+      " Processing batch 47/86\n",
+      " Processing batch 48/86\n",
+      " Processing batch 49/86\n",
+      " Processing batch 50/86\n",
+      " Processing batch 51/86\n",
+      " Processing batch 52/86\n",
+      " Processing batch 53/86\n",
+      " Processing batch 54/86\n",
+      " Processing batch 55/86\n",
+      " Processing batch 56/86\n",
+      " Processing batch 57/86\n",
+      " Processing batch 58/86\n",
+      " Processing batch 59/86\n",
+      " Processing batch 60/86\n",
+      " Processing batch 61/86\n",
+      " Processing batch 62/86\n",
+      " Processing batch 63/86\n",
+      " Processing batch 64/86\n",
+      " Processing batch 65/86\n",
+      " Processing batch 66/86\n",
+      " Processing batch 67/86\n",
+      " Processing batch 68/86\n",
+      " Processing batch 69/86\n",
+      " Processing batch 70/86\n",
+      " Processing batch 71/86\n",
+      " Processing batch 72/86\n",
+      " Processing batch 73/86\n",
+      " Processing batch 74/86\n",
+      " Processing batch 75/86\n",
+      " Processing batch 76/86\n",
+      " Processing batch 77/86\n",
+      " Processing batch 78/86\n",
+      " Processing batch 79/86\n",
+      " Processing batch 80/86\n",
+      " Processing batch 81/86\n",
+      " Processing batch 82/86\n",
+      " Processing batch 83/86\n",
+      " Processing batch 84/86\n",
+      " Processing batch 85/86\n",
+      " Processing batch 86/86\n",
+      "Epoch 1: loss = 268.9117\n",
+      "Epoch 2/2\n",
+      " Processing batch 1/86\n",
+      " Processing batch 2/86\n",
+      " Processing batch 3/86\n",
+      " Processing batch 4/86\n",
+      " Processing batch 5/86\n",
+      " Processing batch 6/86\n",
+      " Processing batch 7/86\n",
+      " Processing batch 8/86\n",
+      " Processing batch 9/86\n",
+      " Processing batch 10/86\n",
+      " Processing batch 11/86\n",
+      " Processing batch 12/86\n",
+      " Processing batch 13/86\n",
+      " Processing batch 14/86\n",
+      " Processing batch 15/86\n",
+      " Processing batch 16/86\n",
+      " Processing batch 17/86\n",
+      " Processing batch 18/86\n",
+      " Processing batch 19/86\n",
+      " Processing batch 20/86\n",
+      " Processing batch 21/86\n",
+      " Processing batch 22/86\n",
+      " Processing batch 23/86\n",
+      " Processing batch 24/86\n",
+      " Processing batch 25/86\n",
+      " Processing batch 26/86\n",
+      " Processing batch 27/86\n",
+      " Processing batch 28/86\n",
+      " Processing batch 29/86\n",
+      " Processing batch 30/86\n",
+      " Processing batch 31/86\n",
+      " Processing batch 32/86\n",
+      " Processing batch 33/86\n",
+      " Processing batch 34/86\n",
+      " Processing batch 35/86\n",
+      " Processing batch 36/86\n",
+      " Processing batch 37/86\n",
+      " Processing batch 38/86\n",
+      " Processing batch 39/86\n",
+      " Processing batch 40/86\n",
+      " Processing batch 41/86\n",
+      " Processing batch 42/86\n",
+      " Processing batch 43/86\n",
+      " Processing batch 44/86\n",
+      " Processing batch 45/86\n",
+      " Processing batch 46/86\n",
+      " Processing batch 47/86\n",
+      " Processing batch 48/86\n",
+      " Processing batch 49/86\n",
+      " Processing batch 50/86\n",
+      " Processing batch 51/86\n",
+      " Processing batch 52/86\n",
+      " Processing batch 53/86\n",
+      " Processing batch 54/86\n",
+      " Processing batch 55/86\n",
+      " Processing batch 56/86\n",
+      " Processing batch 57/86\n",
+      " Processing batch 58/86\n",
+      " Processing batch 59/86\n",
+      " Processing batch 60/86\n",
+      " Processing batch 61/86\n",
+      " Processing batch 62/86\n",
+      " Processing batch 63/86\n",
+      " Processing batch 64/86\n",
+      " Processing batch 65/86\n",
+      " Processing batch 66/86\n",
+      " Processing batch 67/86\n",
+      " Processing batch 68/86\n",
+      " Processing batch 69/86\n",
+      " Processing batch 70/86\n",
+      " Processing batch 71/86\n",
+      " Processing batch 72/86\n",
+      " Processing batch 73/86\n",
+      " Processing batch 74/86\n",
+      " Processing batch 75/86\n",
+      " Processing batch 76/86\n",
+      " Processing batch 77/86\n",
+      " Processing batch 78/86\n",
+      " Processing batch 79/86\n",
+      " Processing batch 80/86\n",
+      " Processing batch 81/86\n",
+      " Processing batch 82/86\n",
+      " Processing batch 83/86\n",
+      " Processing batch 84/86\n",
+      " Processing batch 85/86\n",
+      " Processing batch 86/86\n",
+      "Epoch 2: loss = 263.3737\n"
+     ]
+    }
+   ],
+   "source": [
+    "networks = with_laund_networks + non_laundering_networks # laundering + non-laundering\n",
+    "\n",
+    "train_simclr_fast(\n",
+    "    networks=networks,     \n",
+    "    full_df=df_full,\n",
+    "    encoder=encoder,\n",
+    "    projector=projector,\n",
+    "    optimizer=optimizer,\n",
+    "    device=device,\n",
+    "    batch_size=32,\n",
+    "    epochs=2\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5083d303",
+   "id": "15e91439",
    "metadata": {},
    "outputs": [],
    "source": []
